--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   webview_flutter_android: ^3.13.2
   webview_flutter_platform_interface: ^2.9.0
   webview_flutter_wkwebview: ^3.10.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
